Pretty up base.scss and head.html

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 body {
   background-color: #A47764;
-  font-family: sans-serif;
+  font-family: "Shadows Into Light Two";
   margin: auto;
   max-width: 70ch;
-  color: #d99a11;
+  color: #834c15;
 }
