--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,4 +3,7 @@
   <link rel="stylesheet" href="{{ '/assets/mocha-theme.css' | relative_url }}">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 </head>
